--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,117 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Obadia Kiptanui - Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            font-size: 24px;
+        }
+        section {
+            margin: 20px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #333;
+            color: white;
+        }
+        input, select {
+            width: 100%;
+            padding: 8px;
+            margin: 5px 0;
+        }
+        input[type="submit"] {
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+            padding: 10px;
+        }
+        input[type="submit"]:hover {
+            background-color: #555;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        Obadia Kiptanui - Portfolio
+    </header>
+
+    <!-- Ordered List with Roman Numerals -->
+    <section>
+        <h2>My Skills</h2>
+        <ol type="I">
+            <li>Web Development</li>
+            <li>Software Engineering</li>
+            <li>Teaching Computer Science & Mathematics</li>
+        </ol>
+    </section>
+
+    <!-- External Image -->
+    <section>
+        <h2>About Me</h2>
+        <img src="https://images.pexels.com/photos/5473311/pexels-photo-5473311.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Obadia Kiptanui" width="300">
+        <p>Hi, I'm Obadia Kiptanui, a passionate educator and developer specializing in web technologies and database systems.</p>
+    </section>
+
+    <!-- Contacts Table -->
+    <section>
+        <h2>Contact Information</h2>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Mobile</th>
+                <th>Email</th>
+            </tr>
+            <tr>
+                <td>Obadia Kiptanui</td>
+                <td>7103-30100, Eldoret</td>
+                <td>0721349587</td>
+                <td>kiptanuiobadia629@gmail.com</td>
+            </tr>
+        </table>
+    </section>
+
+    <!-- Registration Form -->
+    <section>
+        <h2>Contact Me</h2>
+        <form action="#" method="post">
+            <label for="name">Full Name:</label>
+            <input type="text" id="name" name="name" placeholder="Enter your full name" required><br><br>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" placeholder="Enter your message" required></textarea><br><br>
+
+            <input type="submit" value="Send Message">
+        </form>
+    </section>
+</body>
+</html>
 
